--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -12,19 +12,31 @@
 	
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/plane1"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
+		android:theme="@android:style/Theme.Light.NoTitleBar" 
         android:name=".ApplicationUtil"
         >
+        
         <activity
-            android:name=".RoomActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|keyboardHidden">
+            android:name=".AppStart"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LoginActivity" >
+        </activity>
+        <activity
+            android:name=".SignupActivity" >
+        </activity>
+        
+        <activity
+            android:name=".RoomActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|keyboardHidden">
         </activity>
         <activity
             android:name=".InterRoom"
@@ -34,6 +46,7 @@
             android:name=".GameView"
             android:configChanges="orientation|screenSize">
         </activity>
+        
         
     </application>
 
