--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:targetSdkVersion="21" />
     
 	<uses-permission android:name="android.permission.INTERNET"/>
+	<!-- 在SDCard中创建与删除文件权限 -->
+  	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
+ 	<!-- 往SDCard写入数据权限 -->
+ 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 	
     <application
         android:allowBackup="true"
